--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
     </h1>
     <h2>a <span><u>pro</u></span>grammer</h2>
     <img class="bottom-cloud" src="C:\Users\admin\OneDrive\Desktop\web development\projects\CSS-MY SITE\cloud.png" alt="cloud-img">
-    <img class="mountain" src="https://media0.giphy.com/media/hqU2KkjW5bE2v2Z7Q2/giphy.gif?cid=ecf05e472t8iii5inx9ge7sr5m7f1glbvlmhpdttyf31q4ox&rid=giphy.gif&ct=ts" alt="code-gif">
+    <img class="mountain" src="https://media0.giphy.com/media/hqU2KkjW5bE2v2Z7Q2/giphy.gif?cid=ecf05e472t8iii5inx9ge7sr5m7f1glbvlmhpdttyf31q4ox&rid=giphy.gif&ct=ts" alt="code-gif" style="width: 400px">
 
   </div>
   <div class="middle-container">
